--- a/front-end/src/styles/Home.css
+++ b/front-end/src/styles/Home.css
@@ -1,13 +1,13 @@
 .homeContainer {
   height: 100vh;
   width: 100%;
-  background-image: url("./media/HomeBG.svg");
+  background-image: url("./media/homeBackground.svg");
   background-position: center;
   background-size: contain;
   background-attachment: fixed;
   background-repeat: no-repeat;
 
-  background-color: #c6dabe;
+  background-color: #35244B;
 }
 
 .textContainer {
@@ -30,6 +30,7 @@ h10 {
 }
 
 h9 {
+  /* text-align: center; */
   font-size: 3.5em;
   font-family: Comfortaa Bold;
   color: #186e8b;
