connected the user to profile and render its info

--- a/front-end/src/styles/About.css
+++ b/front-end/src/styles/About.css
@@ -1,6 +1,6 @@
 .aboutContainer {
   height: 100vh;
-  background-image: url("./media/aboutBackground.svg");
+  background-image: url("./media/homeBackground.svg");
   background-size: contain;
   width: 100%;
   background-position:center;
