--- a/front-end/src/styles/ItemDetails.css
+++ b/front-end/src/styles/ItemDetails.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("./media/background2.svg");
+    background-image: url("./media/homeBackground.svg");;
     background-attachment: fixed;
     background-size: contain;
 }
