--- a/front-end/src/styles/ItemNew.css
+++ b/front-end/src/styles/ItemNew.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url("./media/background.svg");
+  background-image: url("./media/homeBackground.svg");;
   background-size: contain;
   background-position: center;
   background-attachment: fixed;
