--- a/front-end/src/styles/NavBar.css
+++ b/front-end/src/styles/NavBar.css
@@ -1,11 +1,11 @@
 .navContainer {
-  background-color: #186e8b;
+  background-color: #35244B;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
   margin-bottom: 5px;
-  box-shadow: 0px 3px 7px #0a2900;
+  box-shadow: 0px 3px 7px #35244B;
 }
 
 .links {
@@ -33,7 +33,7 @@ a {
 }
 
 a:hover {
-  color: #98bd89;
+  color: black;
   font-family: Comfortaa Bold;
   cursor: pointer;
 }
