--- a/front-end/src/styles/SignUp.css
+++ b/front-end/src/styles/SignUp.css
@@ -5,9 +5,15 @@
 
 .signupForm {
     width: 27em;
+    height: 10em;
     
 }
 
 input#dateOfBirth {
     width: 29em;
 }
+
+.formContainer {
+    background-color: purple;
+}
+
