--- a/front-end/src/styles/About.css
+++ b/front-end/src/styles/About.css
@@ -1,7 +1,7 @@
 .aboutContainer {
   height: 100vh;
   background-image: url("./media/homeBackground.svg");
-  background-size: contain;
+  background-size: cover;
   width: 100%;
   background-position:center;
   background-color: #c6dabe;
