--- a/front-end/src/styles/ItemNew.css
+++ b/front-end/src/styles/ItemNew.css
@@ -1,12 +1,12 @@
 .formContainer {
-  background-color: #c6dabe;
+  background-color: #35244B;
   height: 100vh;
   margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-image: url("./media/homeBackground.svg");;
-  background-size: contain;
+  background-size:cover;
   background-position: center;
   background-attachment: fixed;
   padding-top: 2em;
@@ -21,7 +21,7 @@
 }
 
 form {
-  background-color: #186e8b;
+  background-color: #35244B;
   display: flex;
   flex-direction: column;
   align-items: center;
