--- a/front-end/src/styles/Login.css
+++ b/front-end/src/styles/Login.css
@@ -31,7 +31,7 @@ h2 {
 .button1 {
   border: solid white 2px;
   border-color: white;
-  background-color: #98bd89;
+  background-color: #35244B;
   color: white;
   font-family: Comfortaa Bold;
   font-size: 1.1em;
