--- a/front-end/src/styles/About.css
+++ b/front-end/src/styles/About.css
@@ -4,7 +4,7 @@
   background-size: cover;
   width: 100%;
   background-position:center;
-  background-color: #c6dabe;
+  background-color: purple;
   background-attachment: fixed;
   margin: 0;
   display: flex;
@@ -25,7 +25,7 @@ h3 {
   border: solid #186e8b 0.3em;
   border-radius: 20px;
   width: 80%;
-  background: rgba(255, 255, 255, 0.7);
+  background: white;
   text-align: center;
   padding: 1em;
   font-family: Warung;
@@ -37,7 +37,7 @@ h3 {
   border: solid #186e8b 0.3em;
   border-radius: 20px;
   width: 80%;
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -45,18 +45,4 @@ h3 {
   padding: 1em;
   font-size: 1.5em;
   box-shadow: 0px 5px 8px #0A2900;
-}
-
-.memberContainer {
-    display: flex;
-    width: 100%;
-    justify-content: space-evenly;
-}
-.member {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    background-color: #186e8b;
-    border-radius: 25px;
-    box-shadow: 0px 5px 8px #0A2900;
 }
