--- a/front-end/src/styles/Home.css
+++ b/front-end/src/styles/Home.css
@@ -1,6 +1,6 @@
 .homeContainer {
   height: 100vh;
-  width: 100%;
+  /* width: 100%; */
   background-image: url("./media/homeBackground.svg");
   background-position: center;
   background-size: cover;
@@ -10,33 +10,57 @@
   background-color: #35244B;
 }
 
-.textContainer {
+/* .textContainer {
   width: 50em;
   padding: 2em;
   height: 25%;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
+  justify-content: space-between;
   font-family: Comfortaa Bold;
   color: #098a25;
-}
+} */
 
-h10 {
+/* h10 {
   font-size: 2em;
   width: auto;
   color: white;
 
   padding-top: 1em;
-}
+} */
 
 h9 {
-  /* text-align: center; */
+  text-align: center;
   font-size: 3.5em;
   font-family: Comfortaa Bold;
-  color: #186e8b;
+  color: white;
 }
 
-h11 {
+/* h11 {
   color: #186e8b;
+} */
+
+h3 {
+  text-align: center;
+  color: red
 }
 
+.carousel-wrapper {
+  align-self: center;
+  background-color: darkpurple;
+  width: 75%;
+  height: 500px;
+}
+
+.rec-carousel-h1:focus {
+  outline: none;
+  box-shadow: inset 0 0 1px 0px violet;
+}
+
+.cardImage {
+ 
+    height: 40vh;
+    width: 100%;
+    object-fit: cover;
+  
+}
