added second carousel in landing page for movies, completely changed the profile page with different stylings, working on more stylings for it

--- a/front-end/src/styles/Home.css
+++ b/front-end/src/styles/Home.css
@@ -1,5 +1,5 @@
 .homeContainer {
-  height: 100vh;
+  height: 100%;
   /* width: 100%; */
   background-image: url("./media/homeBackground.svg");
   background-position: center;
