--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,4 +1,3 @@
 .App {
     min-height: 99vh;
-    background-color: purple;
-  }
+    background: linear-gradient(to top, #5f0f40 0%, #310e68 100%);  }
