--- a/front-end/src/styles/About.css
+++ b/front-end/src/styles/About.css
@@ -1,11 +1,10 @@
 .aboutContainer {
   height: 100vh;
-  background-image: url("./media/homeBackground.svg");
+  /* background-image: url("./media/homeBackground.svg"); */
   background-size: cover;
   width: 100%;
   background-position:center;
-  background-color: purple;
-  background-attachment: fixed;
+  background: linear-gradient(to top, #5f0f40 0%, #310e68 100%);  background-attachment: fixed;
   margin: 0;
   display: flex;
   flex-direction: column;
