--- a/front-end/src/styles/Home.css
+++ b/front-end/src/styles/Home.css
@@ -1,46 +1,22 @@
 .homeContainer {
-  height: 100%;
-  /* width: 100%; */
-  background-image: url("./media/homeBackground.svg");
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-color: #35244B;
   display: flex;
   flex-direction: column;
+  background: linear-gradient(to top, #5f0f40 0%, #310e68 100%);
 }
-
-/* .textContainer {
-  width: 50em;
-  padding: 2em;
-  height: 25%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  font-family: Comfortaa Bold;
-  color: #098a25;
-} */
-
-/* h10 {
-  font-size: 2em;
-  width: auto;
-  color: white;
-
-  padding-top: 1em;
-} */
 
 h9 {
   text-align: center;
-  font-size: 3.5em;
-  font-family: Comfortaa Bold;
+  font-family: 'Mr Dafoe';
+  margin: 0;
+  font-size: 5.5em;
   color: white;
+  text-shadow: 0 0 0.05em #fff, 0 0 0.2em #fe05e1, 0 0 0.3em #fe05e1;
 }
 
-/* h11 {
-  color: #186e8b;
-} */
 
+.moviesItems {
+  margin-top: -90px
+}
 h3 {
   text-align: center;
   color: red
@@ -49,13 +25,10 @@ h3 {
 .carousel-wrapper {
   background-color: darkpurple;
   width: 95%;
-  height: 500px;
+  height: 400px;
 }
 
-/* .rec-carousel-h1:focus {
-  outline: none;
-  box-shadow: inset 0 0 1px 0px violet;
-} */
+
 
 .cardImage {
  
@@ -73,4 +46,8 @@ h3 {
 .homeButton {
   align-self: center;
   width: 200px;
+}
+
+.card {
+  
 }
