--- a/front-end/src/styles/profile.css
+++ b/front-end/src/styles/profile.css
@@ -2,69 +2,69 @@
   height: 100vh;
   width: 100%;
   background-position: center;
-  background-size: cover;
+  background-size: auto;
   background-attachment: fixed;
   background-repeat: repeat;
   background-color: #35244b;
-
 }
 
-  .profileTitle {
-    text-align: center;
+.title {
+  text-align: center;
+  font-family: 'Mr Dafoe';
+  /* margin: 0; */
+  text-size-adjust:inherit;
+  font-size: 4em;
+  color: white;
+  text-shadow: 0 0 0.05em #fff, 0 0 0.2em #fe05e1, 0 0 0.3em #fe05e1;
 }
 .userCard {
-    /* border: 1px black solid; */
-    max-width: 90%;
-    height: 400px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    /* align-self: center; */
-    /* margin: auto; */
-    background-color: white;
-    box-shadow:
-    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-    0 12.5px 10px rgba(0, 0, 0, 0.06),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-    0 100px 80px rgba(0, 0, 0, 0.12)
-  ;
-  
-    
-    
-    min-height: 400px;
-    width: 70vw;
-    margin: 50px auto;
-    background: white;
-    border-radius: 10px;
+  /* border: 1px black solid; */
+  max-width: 90%;
+  height: 450px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* align-self: center; */
+  /* margin: auto; */
+  background-color: white;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
 
+  min-height: 400px;
+  width: 70vw;
+  margin: 50px auto;
+  background: white;
+  border-radius: 0.5rem;
 }
-/* .userCard :first-child {
-    width: 200px;
-} */
-.userCard :second-child {
-    width: auto;
-}
+
 .userMain {
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-   background-color: black;
-   align-items: center;
-   padding-top: 5%;
-   border-top-left-radius: 10px;
-   border-bottom-left-radius: 10px;
-
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  padding-top: 4rem;
+  border-top-left-radius: 0.4rem;
+  border-bottom-left-radius: 0.4rem;
+  background: linear-gradient(to top, #310e68 0%, #5f0f40 100%);
 }
 
 .userInfo {
-    padding-left: 20px;
-    padding-top: 20px;
-    width: 80%;
+  padding-left: 20px;
+  padding-top: 20px;
+  width: 80%;
 }
 
 .usersItems {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
+}
+
+.avatar {
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  border-radius: 50%;
 }
