--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,3 +1,9 @@
 .App {
-    min-height: 99vh;
-    background: linear-gradient(to top, #5f0f40 0%, #310e68 100%);  }
+  min-height: 99vh;
+  background: linear-gradient(to top, #5f0f40 0%, #310e68 100%);
+}
+
+.fourOFourButton {
+    width: 200px;
+    height: 100px;
+}
