--- a/front-end/src/styles/Home.css
+++ b/front-end/src/styles/Home.css
@@ -11,21 +11,26 @@ h9 {
   font-size: 5.5em;
   color: white;
   text-shadow: 0 0 0.05em #fff, 0 0 0.2em #fe05e1, 0 0 0.3em #fe05e1;
+  padding: 1rem;
 }
-
+.homeTitles {
+  text-shadow: 0 0 0.05em #fff, 0 0 0.2em #fe05e1, 0 0 0.3em #fe05e1;
+  color: white;
+  font-size: 1.5rem;
+}
 
 .moviesItems {
   margin-top: -90px
 }
-h3 {
+/* h3 {
   text-align: center;
   color: red
-}
+} */
 
 .carousel-wrapper {
   background-color: darkpurple;
   width: 95%;
-  height: 400px;
+  height: 500px;
 }
 
 
@@ -40,14 +45,44 @@ h3 {
 
 .carousel {
   /* background-color: black; */
-  height: 300px;
+  /* height: 500px; */
 }
 
 .homeButton {
   align-self: center;
-  width: 200px;
+  width: 200px !important;
+}
+.carouselButton {
+  /* font-size: 10px !important; */
+  width: 100% ;
+  color: red;
+  background: linear-gradient(to right, #5f0f40 0%, #310e68 100%);
 }
 
-.card {
-  
+
+.CarouselCards {
+  background-color: #FAF9F6;
+  width: 250px;
+  height: 400px;
+  display: grid;
+  grid-template-rows: auto auto auto;
+  color: black !important ;
+  align-items: center;
+  text-align: center;
+  gap: 10px;
+  font-family: Comfortaa Bold;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+  0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+  0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  0 100px 80px rgba(0, 0, 0, 0.12);
+  border-radius: 0.5rem;
+  padding-bottom: 15px;
+}
+
+.carouselPicture {
+  max-width: 300px;
+  max-height: 270px;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  padding-bottom: 30px;
 }
