--- a/front-end/src/styles/ItemNew.css
+++ b/front-end/src/styles/ItemNew.css
@@ -1,5 +1,5 @@
 .formContainer {
-  background-color: #35244B;
+  /* background-color: #35244B; */
   height: 100vh;
   margin: 0;
   display: flex;
@@ -16,12 +16,14 @@
 .formTitle {
   font-family: Comfortaa Bold;
   color: white;
-  font-size: 2.3em;
-  border: white;
+  font-size: 2.7em;
+  /* border: white; */
+  text-align: center;
 }
 
 form {
-  background-color: #35244B;
+  width: 600px;
+  background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,11 +32,15 @@ form {
   border-radius: 25px;
   border: solid white 0.3em;
   box-shadow: 0px 5px 8px #0A2900;
+  color: black;
+  align-self: center;
+  margin-right: 200px;
 }
 
 .newItemForm {
   width: 28em;
   height: 25em;
+  /* background-color: white; */
 }
 
 .inputs {
@@ -43,7 +49,7 @@ form {
 }
 
 input {
-  width: 23em;
+  width: 35em;
   margin: 0.5em;
   border-radius: 17px;
   border: 0;
@@ -72,19 +78,24 @@ div.inputs {
   flex-direction: column;
 }
 
-.button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 7em;
+.submitButton {
+  width: 6em;
   height: 2em;
   border: solid white 2px;
-  background-color: #98bd89;
+  background: linear-gradient(to right, #5f0f40 0%, #310e68 100%);
   color: white;
   font-family: Comfortaa Bold;
   font-size: 1.1em;
   margin-bottom: 1em;
-  padding: 0.4em;
+  /* padding: 0.4em; */
+  margin-right: 40px;
+  text-align: center;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+
+  border-radius: 0.5rem;
 }
 
 label {
@@ -93,11 +104,7 @@ label {
   padding-left: 7px;
 }
 
-.button:hover {
-  background-color: white;
-  color: #186e8b;
-  cursor: pointer;
-}
+
 
 .imageUpload {
   display: flex;
@@ -110,7 +117,13 @@ label {
 button.button1 {
   height: 2em;
   width: 7em;
-  margin-bottom: 1em;
+  /* margin-top: 5em; */
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+
+  border-radius: 0.5rem;
 }
 
 .newItemImage {
@@ -118,5 +131,5 @@ button.button1 {
 }
 
 .photo {
-  margin: 1em
+  margin: 1em;
 }
