--- a/front-end/src/styles/NavBar.css
+++ b/front-end/src/styles/NavBar.css
@@ -1,11 +1,11 @@
 .navContainer {
-  background-color: #310E68;
+  background-color: #330E66;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
   margin-bottom: 5px;
-  box-shadow: 0px 3px 7px #310E68;
+  box-shadow: 0px 3px 7px #330E66;
 }
 
 .links {
@@ -90,24 +90,25 @@ nav #user-menu {
 .dropButtons {
   display: flex;
   flex-direction: column;
-  height: 7.3em;
+  height: 5.3em;
   justify-content: end;
   align-items: center;
   width: 5.5em;
   margin-right: 0px;
+  gap: 0.8rem;
 }
 .button1 {
   margin-right: 25px;
 }
 
-/* .dropdownButton {
+.dropdownButton {
   border-radius: 25px !important;
   font-size: 1.4em !important;
   width: 6em;
   border: solid white 2px;
   display: flex;
   justify-content: center;
-} */
+}
 
 .ddbContainer {
   display: flex;
