--- a/front-end/src/styles/profile.css
+++ b/front-end/src/styles/profile.css
@@ -5,7 +5,7 @@
   background-size: auto;
   background-attachment: fixed;
   background-repeat: repeat;
-  background-color: #35244b;
+  background: linear-gradient(to top, #5f0f40 0%, #310e68 100%);
 }
 
 .title {
@@ -26,7 +26,7 @@
   justify-content: space-between;
   /* align-self: center; */
   /* margin: auto; */
-  background-color: white;
+  /* background-color: white; */
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
     0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
     0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
@@ -35,7 +35,7 @@
   min-height: 400px;
   width: 70vw;
   margin: 50px auto;
-  background: white;
+  background-color: #FAF9F6;
   border-radius: 0.5rem;
 }
 
@@ -48,7 +48,7 @@
   padding-top: 4rem;
   border-top-left-radius: 0.4rem;
   border-bottom-left-radius: 0.4rem;
-  background: linear-gradient(to top, #310e68 0%, #5f0f40 100%);
+  background-color: #35244b;
 }
 
 .userInfo {
