fixed stylings and dependency issues

--- a/front-end/src/styles/ItemDetails.css
+++ b/front-end/src/styles/ItemDetails.css
@@ -6,6 +6,7 @@
     align-items: center;
     background-attachment: fixed;
     background-size: contain;
+    
 }
 
 
@@ -22,6 +23,7 @@
     width: 80%;
     margin: 1em;
     background-color: #FAF9F6;
+    border: solid #35244b 0.2em;
     border-radius: 0.5rem;
     box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
     0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
@@ -74,30 +76,36 @@ h6 {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    text-align: center;
     padding:2em;
-    border: solid #186e8b 0.3em;
-    border-radius: 20px;
-    width: 80%;
+    border: solid #35244b 0.3em;
+    border-radius: 0.5rem;
+    width: 70%;
     margin: 1em;
-    background: rgba(255, 255, 255, 0.7);
+    background-color: #FAF9F6;
+    /* background: rgba(255, 255, 255, 0.7); */
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
    
 }
 
-.checkoutContainer {
+/* .checkoutContainer {
     width: 80%;
-}
+} */
 h1 {
     padding: 10px;
     padding-top: 10px;
 }
 
-.paymentForm {
+/* .paymentForm {
     background-color: black;
     display: grid;
     grid-template-rows: auto auto auto auto ;
     grid-template-columns: auto ;
-    /* justify-items: center; */
-}
+    justify-items: center; 
+} */
 .row {
     align-self: center;
     justify-content: center;
