--- a/front-end/src/styles/About.css
+++ b/front-end/src/styles/About.css
@@ -21,18 +21,22 @@ h3 {
 }
 
 .aboutBlurb {
-  border: solid #186e8b 0.3em;
+  border: solid #35244b 0.2em;
   border-radius: 20px;
   width: 80%;
-  background: white;
+  background: #FAF9F6;
   text-align: center;
   padding: 1em;
   font-family: Warung;
   font-size: 1.5em;
-  box-shadow: 0px 5px 8px #0A2900;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+  0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+  0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  0 100px 80px rgba(0, 0, 0, 0.12);
+
 }
 
-.aboutTeam {
+/* .aboutTeam {
   border: solid #186e8b 0.3em;
   border-radius: 20px;
   width: 80%;
@@ -44,4 +48,4 @@ h3 {
   padding: 1em;
   font-size: 1.5em;
   box-shadow: 0px 5px 8px #0A2900;
-}
+} */
