--- a/front-end/src/styles/Home.css
+++ b/front-end/src/styles/Home.css
@@ -50,10 +50,18 @@ h9 {
 
 .homeButton {
   align-self: center;
-  width: 200px !important;
+  width: 300px;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+
+  border-radius: 0.5rem;
+  background: linear-gradient(to right, #5f0f40 0%, #310e68 100%);
+  color: white;
+  cursor: pointer;
 }
 .carouselButton {
-  /* font-size: 10px !important; */
   width: 100% ;
   color: red;
   background: linear-gradient(to right, #5f0f40 0%, #310e68 100%);
