--- a/front-end/src/styles/ItemNew.css
+++ b/front-end/src/styles/ItemNew.css
@@ -21,9 +21,9 @@
   text-align: center;
 }
 
-form {
+.itemNewForm {
   width: 600px;
-  background-color: black;
+  background-color: #FAF9F6;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,7 +32,7 @@ form {
   border-radius: 25px;
   border: solid white 0.3em;
   box-shadow: 0px 5px 8px #0A2900;
-  color: black;
+  color: black !important;
   align-self: center;
   margin-right: 200px;
 }
@@ -99,9 +99,10 @@ div.inputs {
 }
 
 label {
-  color: white;
+  color: black;
   font-size: larger;
   padding-left: 7px;
+  text-align: center;
 }
 
 
