fixed home button, fixed dropdown menu closing

--- a/front-end/src/styles/Home.css
+++ b/front-end/src/styles/Home.css
@@ -1,10 +1,12 @@
 .homeContainer {
   display: flex;
   flex-direction: column;
+  justify-content:flex-start;
   background: linear-gradient(to top, #5f0f40 0%, #310e68 100%);
+  
 }
 
-h9 {
+h4 {
   text-align: center;
   font-family: 'Mr Dafoe';
   margin: 0;
@@ -18,7 +20,9 @@ h9 {
   color: white;
   font-size: 1.5rem;
 }
-
+.homeMainTitle {
+  font-size: 5rem;
+}
 .moviesItems {
   margin-top: -90px
 }
@@ -43,14 +47,12 @@ h9 {
   
 }
 
-.carousel {
-  /* background-color: black; */
-  /* height: 500px; */
-}
 
 .homeButton {
   align-self: center;
-  width: 300px;
+  width: 120px;
+  height: 50px;
+  font-size: 17px;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
     0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
     0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
@@ -60,11 +62,18 @@ h9 {
   background: linear-gradient(to right, #5f0f40 0%, #310e68 100%);
   color: white;
   cursor: pointer;
+  align-content: center;
+  justify-content: center;
+  margin-right: 60px;
+  margin-bottom: 30px;
+  text-align: center;
+  padding-top: 10px;
 }
 .carouselButton {
   width: 100% ;
   color: red;
   background: linear-gradient(to right, #5f0f40 0%, #310e68 100%);
+  position: sticky;
 }
 
 
