--- a/front-end/src/styles/ItemDetails.css
+++ b/front-end/src/styles/ItemDetails.css
@@ -117,7 +117,7 @@ h1 {
 
 #cc-number {
     padding-left: 1px;
-    width: 370px
+    width: 350px
 }
 
 
@@ -125,6 +125,6 @@ h1 {
 .cardCvc {
     display: flex;
     justify-content:flex-end;
-    padding-left: 100px;
-    width: 100px;
+    /* padding-left: 150px; */
+    width: 70px !important;
 }
