--- a/front-end/src/styles/ItemNew.css
+++ b/front-end/src/styles/ItemNew.css
@@ -1,7 +1,7 @@
 .formContainer {
   /* background-color: #35244B; */
   height: 100vh;
-  margin: 0;
+  /* margin: 0; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,6 +11,8 @@
   background-attachment: fixed; */
   padding-top: 2em;
   padding-bottom: 4em;
+  
+  
 }
 
 .formTitle {
@@ -19,6 +21,7 @@
   font-size: 2.7em;
   /* border: white; */
   text-align: center;
+  
 }
 
 .itemNewForm {
@@ -34,18 +37,21 @@
   box-shadow: 0px 5px 8px #0A2900;
   color: black !important;
   align-self: center;
-  margin-right: 200px;
+  margin-right: 100rem !important;
+  
 }
 
 .newItemForm {
   width: 28em;
   height: 25em;
   /* background-color: white; */
+  margin-right: 10rem !important;
 }
 
 .inputs {
   margin: 5%;
   margin-bottom: 0;
+  
 }
 
 input {
@@ -56,6 +62,7 @@ input {
   font-size: 1em;
   align-self: center;
   padding: 3px;
+  
 
 }
 
@@ -76,6 +83,7 @@ select {
 div.inputs {
   display: flex;
   flex-direction: column;
+  
 }
 
 .submitButton {
@@ -125,6 +133,7 @@ button.button1 {
     0 100px 80px rgba(0, 0, 0, 0.12);
 
   border-radius: 0.5rem;
+  
 }
 
 .newItemImage {
